added admin functionality

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,6 +13,11 @@
     margin: 0;
 }
 
+#users-button{
+    font-size: 28px;
+    color: #eeeeee; 
+}
+
 .auth-buttons {
     display: flex;
     gap: 10px;
