--- a/src/app/main-page/thread-create-form/thread-create-form.component.html
+++ b/src/app/main-page/thread-create-form/thread-create-form.component.html
@@ -16,5 +16,5 @@
         [(ngModel)]="service.formData.content"
         required maxlength="5000"></textarea>
     </div>
-    <button type="submit" class="create-thread-btn">Create</button>
+    <button type="submit" class="create-thread-btn">Apply</button>
 </form>
