--- a/src/app/main-page/thread-details/thread-details.component.html
+++ b/src/app/main-page/thread-details/thread-details.component.html
@@ -1,6 +1,6 @@
 <div id="thread-list-item">
   <div id="thread-list-item-top">
-      <div id="thread-title">
+      <div id="thread-title-detail">
           {{thread.title}}
       </div>
   </div>
